--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "postcss": "^5.0.9"
   },
   "devDependencies": {
-    "eslint": "1.6.0"
+    "eslint": "1.6.0",
+    "mocha":  "2.3.3",
+    "chai":   "3.3.0"
   },
   "scripts": {
-    "test": "eslint *.js"
+    "test": "eslint *.js && mocha test.js"
   }
 }
