--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,6 @@
 .gitignore
+.npmignore
+.editorconfig
 
 node_modules/
 npm-debug.log
@@ -6,3 +8,4 @@ yarn-error.log
 yarn.lock
 
 .travis.yml
+test/
