--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
     "postcss": "^5.2.6"
   },
   "devDependencies": {
-    "ava": "^0.17.0",
     "eslint": "^3.12.2",
-    "eslint-config-postcss": "^2.0.2"
+    "eslint-config-postcss": "^2.0.2",
+    "jest": "^18.0.0"
   },
   "scripts": {
-    "test": "ava && eslint *.js test/*.js"
+    "test": "jest && eslint *.js test/*.js"
   },
   "eslintConfig": {
     "extends": "eslint-config-postcss/es5",
     "rules": {
-      "quote-props": 0
+      "quote-props": "off"
+    },
+    "env": {
+      "jest": true
     }
   }
 }
