Add coverage to Jest

--- a/package.json
+++ b/package.json
@@ -23,7 +23,14 @@
     "jest": "^18.0.0"
   },
   "scripts": {
-    "test": "jest && eslint *.js test/*.js"
+    "test": "jest --coverage && eslint *.js test/*.js"
+  },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "statements": 100
+      }
+    }
   },
   "eslintConfig": {
     "extends": "eslint-config-postcss/es5",
