--- a/package.json
+++ b/package.json
@@ -20,11 +20,20 @@
   "devDependencies": {
     "eslint": "^3.12.2",
     "eslint-config-postcss": "^2.0.2",
-    "jest": "^18.0.0"
+    "jest": "^18.0.0",
+    "lint-staged": "^3.2.4",
+    "pre-commit": "^1.2.2"
   },
   "scripts": {
+    "lint-staged": "lint-staged",
     "test": "jest --coverage && eslint *.js test/*.js"
   },
+  "lint-staged": {
+    "*.js": "eslint"
+  },
+  "pre-commit": [
+    "lint-staged"
+  ],
   "jest": {
     "coverageThreshold": {
       "global": {
