Add support for at-rules with same name

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "eslintConfig": {
     "extends": "eslint-config-postcss/es5",
     "rules": {
+      "no-use-before-define": "off",
       "quote-props": "off"
     },
     "env": {
