--- a/package.json
+++ b/package.json
@@ -20,7 +20,16 @@
   },
   "devDependencies": {
     "eslint": "^5.1.0",
-    "eslint-config-postcss": "^2.0.2",
+    "eslint-config-logux": "^23.0.2",
+    "eslint-config-postcss": "^3.0.2",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-es5": "^1.3.1",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jest": "^21.17.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-standard": "^3.1.0",
     "jest": "^23.4.1",
     "lint-staged": "^7.2.0",
     "pre-commit": "^1.2.2"
@@ -45,11 +54,7 @@
   "eslintConfig": {
     "extends": "eslint-config-postcss/es5",
     "rules": {
-      "no-use-before-define": "off",
-      "quote-props": "off"
-    },
-    "env": {
-      "jest": true
+      "security/detect-unsafe-regex": "off"
     }
   }
 }
