--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "^7.0.0"
   },
   "devDependencies": {
+    "clean-publish": "^1.0.7",
     "eslint": "^5.1.0",
     "eslint-config-logux": "^23.0.2",
     "eslint-config-postcss": "^3.0.2",
