--- a/package.json
+++ b/package.json
@@ -16,23 +16,24 @@
   "repository": "postcss/postcss-js",
   "dependencies": {
     "camelcase-css": "^2.0.1",
-    "postcss": "^7.0.5"
+    "postcss": "^7.0.14"
   },
   "devDependencies": {
-    "clean-publish": "^1.0.10",
-    "eslint": "^5.8.0",
-    "eslint-config-logux": "^26.0.1",
-    "eslint-config-postcss": "^3.0.6",
+    "@logux/eslint-config": "^28.0.0",
+    "clean-publish": "^1.1.2",
+    "eslint": "^5.16.0",
+    "eslint-config-postcss": "^3.0.7",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-es5": "^1.3.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.27.1",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import-helpers": "^0.1.4",
+    "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.0",
-    "jest": "^23.6.0",
-    "lint-staged": "^8.0.4"
+    "jest": "^24.7.1",
+    "lint-staged": "^8.1.5"
   },
   "scripts": {
     "test": "jest --coverage && eslint *.js test/*.js"
