Add funding links

--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     },
     "./": "./"
   },
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/postcss/"
+  },
   "dependencies": {
     "camelcase-css": "^2.0.1",
     "postcss": "^8.1.0"
