--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "postcss-js",
   "version": "3.0.3",
-  "description": "PostCSS for React Inline Styles, Radium, Free Style and other CSS-in-JS",
+  "description": "PostCSS for CSS-in-JS and styles in JS objects",
   "keywords": [
     "postcss",
     "postcss-runner",
