Move from Travis CI to GitHub Actions

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "repository": "postcss/postcss-js",
   "scripts": {
+    "unit": "jest",
     "test": "jest --coverage && eslint ."
   },
   "engines": {
