--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
       "require": "./index.js",
       "import": "./index.mjs"
     },
-    "./": "./"
+    "./async": "./async.js",
+    "./objectifier": "./objectifier.js",
+    "./parser": "./parser.js",
+    "./process-result": "./process-result.js",
+    "./sync": "./sync.js"
   },
   "funding": {
     "type": "opencollective",
