--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "c8 pnpm unit && eslint ."
   },
   "engines": {
-    "node": ">=10.0"
+    "node": "^12 || ^14 || >= 16"
   },
   "exports": {
     ".": {
