Update test config

--- a/package.json
+++ b/package.json
@@ -70,12 +70,11 @@
       "no-console": "off"
     }
   },
-  "jest": {
-    "testEnvironment": "node",
-    "coverageThreshold": {
-      "global": {
-        "statements": 100
-      }
-    }
+  "c8": {
+    "exclude": [
+      "**/*.test.*"
+    ],
+    "lines": 100,
+    "check-coverage": true
   }
 }
