--- a/package.json
+++ b/package.json
@@ -33,10 +33,16 @@
     "./process-result": "./process-result.js",
     "./sync": "./sync.js"
   },
-  "funding": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/postcss/"
-  },
+  "funding": [
+    {
+      "type": "opencollective",
+      "url": "https://opencollective.com/postcss/"
+    },
+    {
+      "type": "github",
+      "url": "https://github.com/sponsors/ai"
+    }
+  ],
   "peerDependencies": {
     "postcss": "^8.4.21"
   },
