--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "@logux/eslint-config": "^56.1.0",
+    "actions-up": "^1.4.0",
     "c8": "^10.1.3",
     "clean-publish": "^5.2.2",
     "eslint": "^9.35.0",
